--- a/laboratorio9/laboratorio9/laboratorio9.vcxproj.filters
+++ b/laboratorio9/laboratorio9/laboratorio9.vcxproj.filters
@@ -15,8 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="laboratorio9.cpp">
+    <MASM Include="laboratorio9.asm">
       <Filter>Archivos de origen</Filter>
-    </ClCompile>
+    </MASM>
   </ItemGroup>
 </Project>
